# PokemonStadiumRecomp

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  DEBUG.md  ISSUES.md  MODDING.md  README.md  TEMP_PATCHES.md  aspMain.us.1.0.toml  extras.c  fragments_relocatable.txt  game.toml  n64recomp.pin  runner_main.cpp  setup.bat  setup.sh
docs/: disasm-build.md
ghidra/: instructions.txt
include/: ares_worker.h  debug_server.h  pokestadium_render.h  trace.h
rsp/: aspMain.cpp
src/main/: ares_worker.cpp  debug_server.cpp  main.cpp  post_mortem.cpp  post_mortem.hpp  register_overlays.cpp  rsp_aspmain_hook.cpp  rt64_render_context.cpp
tools/: README.md  _apply_disasm_fragment78_patch.sh  _attract_timeline.py  _census_fragment62_pattern_relocs.py  _check_audio_rings.py  _check_progress.py  _check_rom_pers.py  _check_rsp_thread.py  _check_trace_at_crash.py  _count_trace_calls.py  _dbg_drive.py  _decompress_fragment78.py  _drive_to_freeze_then_dump.py  _dump_frag31.py  _dump_loadblocks.py  _dump_missing_fragment.py  _dump_rom_5C7A70.py  _dump_threads.py  _find_crash_thread.py  _grab_trace_v2.py  _ifns.py  _inject_fragment78_sizes.py  _inspect_56E900_jr.py  _inspect_8CC400_header.py  _inspect_drive.py  _inspect_drive2.py  _inspect_first_pattern_frag.py  _inspect_mbp_crash.py  _inspect_post_mortem.py  _inspect_report.py  _inspect_texrect_detail.py  _inspect_textures.py  _inspect_white_screen.py  _live_check.py  _peek_diff.py  _peek_more.py  _peek_now.py  _peek_seg3.py  _peek_state.py  _press_now.py  (+34 more)
